# Integer-Matrices

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: arg_parse.cpp.60CFEF1389176C53.idx  arg_parse.cpp.96D4811D2B0B9467.idx  arg_parse.h.6F002B6BC144F523.idx  arg_parse.h.CCE5F78F897FF6EF.idx  arg_parse.h.D6BDA2BB226C66E9.idx  compute.cpp.A5F0EF287FA30229.idx  compute.cpp.C997A70C07E87C7F.idx  compute.cpp.CBE391554B1B6DB6.idx  compute.h.D4FF82A9BF3B5AF3.idx  data.h.BB4F931289359559.idx  extras.cpp.C9761773136F9CF6.idx  extras.h.DDD6773CA5EBC60F.idx  log.h.61FE1A46006C9ECD.idx  log.h.7A592B037C09999F.idx  log.h.89EF45E7C78F1226.idx  matrix.cpp.16AD35E7EF450467.idx  matrix.cpp.C025670DE33A6C5F.idx  matrix.h.351DD1E3777CEE5C.idx  matrix.h.CF5438D54AB9DE03.idx  pari.cpp.C88913A294E3F5F9.idx  pari.h.E235635426ABB26B.idx  pari_test.cpp.D219E5053893C337.idx  str_utils.cpp.2F8370F044D8BF85.idx  str_utils.cpp.CF5301CF2786B25C.idx  str_utils.h.4898604371DC88BA.idx  str_utils.h.EBB6CF62D329C334.idx  tests.cpp.38AF900706A2D8BD.idx  utils.cpp.634DD45283B60949.idx  utils.h.A3CE53926DC4B03A.idx
compute/: CMakeLists.txt
compute/src/: compute.cpp
doc/: sci_report.tex
pari_wrapper/: CMakeLists.txt
pari_wrapper/include/pari_wrapper/: pari.h
pari_wrapper/src/: pari.cpp  pari_test.cpp
utils/: CMakeLists.txt
utils/include/utils/: arg_parse.h  log.h  str_utils.h
utils/src/: arg_parse.cpp  str_utils.cpp
